Fix/workflow docs only prs (#24)
* docs: Add path traversal protection documentation for PR1 & PR2

Document security enhancements from PR1 and PR2:

- Add comprehensive path traversal protection section to SECURITY.md
  * Secret path protection details
  * SSH key path protection details
  * Security event logging examples

- Document secret name validation in credentials.yml.md
  * Allowed characters (alphanumeric, dash, underscore)
  * Path resolution security measures
  * Examples of valid/invalid secret names

- Add key path validation section to credentials.yml.md
  * Relative and absolute path validation rules
  * Traversal pattern detection
  * Examples of valid/invalid key paths

- Update Configuration.md with path traversal protection overview
  * Secret path security
  * SSH key path security
  * Security event logging

This documentation accompanies the security fixes in PR1 and PR2.

* fix: Allow lint and build workflows to run on documentation-only PRs

Previously, lint.yml and build.yml workflows used paths filters that
prevented them from running on documentation-only PRs. Since these
workflows are marked as Required in branch protection, they would show
as 'Expected - Waiting for status to be reported' and block merges.

Solution:
- Remove paths filter from pull_request trigger (keeps paths for push)
- Add check-changes job using dorny/paths-filter to detect code changes
- Make all lint/build/test jobs conditional - skip when only docs change
- Add skip-docs-only job that always succeeds when no code changes

This ensures:
- Workflows always run (satisfies required checks)
- Jobs skip gracefully when only documentation changed
- Code changes still trigger full lint/build/test pipeline

Fixes issue with PR #23 where workflows didn't run.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,16 +11,38 @@ on:
       - '.github/workflows/*.yml'
   pull_request:
     branches: [main]
-    paths:
-      - 'src/**/*.py'
-      - 'tests/**/*.py'
-      - 'pyproject.toml'
-      - 'setup.py'
-      - '.github/workflows/*.yml'
+    # Paths filter removed - workflows run on all PRs but skip jobs when only docs change
 
 jobs:
+  check-changes:
+    name: Check for code changes
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    outputs:
+      has-code-changes: ${{ steps.filter.outputs.src == 'true' || steps.filter.outputs.tests == 'true' || steps.filter.outputs.config == 'true' }}
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Check for code changes
+        uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            src:
+              - 'src/**/*.py'
+            tests:
+              - 'tests/**/*.py'
+            config:
+              - 'pyproject.toml'
+              - 'setup.py'
+              - '.github/workflows/*.yml'
+      
+
   ruff:
     name: Ruff Linting
+    needs: check-changes
+    if: needs.check-changes.outputs.has-code-changes == 'true'
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -41,6 +63,8 @@ jobs:
 
   black:
     name: Black Formatting
+    needs: check-changes
+    if: needs.check-changes.outputs.has-code-changes == 'true'
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -61,6 +85,8 @@ jobs:
 
   mypy:
     name: Type Checking
+    needs: check-changes
+    if: needs.check-changes.outputs.has-code-changes == 'true'
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -79,4 +105,15 @@ jobs:
       - name: Run mypy
         run: mypy src/ --ignore-missing-imports
         continue-on-error: true
+
+  skip-docs-only:
+    name: Skip (docs only)
+    needs: check-changes
+    if: needs.check-changes.outputs.has-code-changes != 'true'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    steps:
+      - name: Skip workflow
+        run: echo "✅ Documentation-only PR - lint checks skipped"
 
