--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,19 +14,42 @@ on:
       - '.github/workflows/*.yml'
   pull_request:
     branches: [main]
-    paths:
-      - 'src/**/*.py'
-      - 'tests/**/*.py'
-      - 'pyproject.toml'
-      - 'requirements.txt'
-      - 'Dockerfile'
-      - '.dockerignore'
-      - 'config/**/*.yml'
-      - '.github/workflows/*.yml'
+    # Paths filter removed - workflows run on all PRs but skip jobs when only docs change
 
 jobs:
+  check-changes:
+    name: Check for code changes
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    outputs:
+      has-code-changes: ${{ steps.filter.outputs.src == 'true' || steps.filter.outputs.tests == 'true' || steps.filter.outputs.config == 'true' || steps.filter.outputs.docker == 'true' }}
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Check for code changes
+        uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            src:
+              - 'src/**/*.py'
+            tests:
+              - 'tests/**/*.py'
+            config:
+              - 'pyproject.toml'
+              - 'requirements.txt'
+              - 'config/**/*.yml'
+              - '.github/workflows/*.yml'
+            docker:
+              - 'Dockerfile'
+              - '.dockerignore'
+      
+
   lint:
     name: Lint
+    needs: check-changes
+    if: needs.check-changes.outputs.has-code-changes == 'true'
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -54,7 +77,8 @@ jobs:
         continue-on-error: true
 
   test:
-    needs: [lint]
+    needs: [check-changes, lint]
+    if: needs.check-changes.outputs.has-code-changes == 'true' && (needs.lint.result == 'success' || needs.lint.result == 'skipped')
     name: Test Python ${{ matrix.python-version }}
     runs-on: ubuntu-latest
     permissions:
@@ -89,7 +113,8 @@ jobs:
         continue-on-error: true
 
   docker:
-    needs: [lint]
+    needs: [check-changes, lint]
+    if: needs.check-changes.outputs.has-code-changes == 'true' && (needs.lint.result == 'success' || needs.lint.result == 'skipped')
     name: Docker Build
     runs-on: ubuntu-latest
     permissions:
@@ -117,4 +142,15 @@ jobs:
           docker images | grep mcp-ssh-orchestrator
           docker run --rm mcp-ssh-orchestrator:test python -c "import mcp_ssh; print('✅ MCP SSH module imported successfully')"
           echo "✅ Docker image test passed!"
+
+  skip-docs-only:
+    name: Skip (docs only)
+    needs: check-changes
+    if: needs.check-changes.outputs.has-code-changes != 'true'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    steps:
+      - name: Skip workflow
+        run: echo "✅ Documentation-only PR - build and test checks skipped"
 
